debugged and add plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,11 @@ export(extract_draws)
 export(fit)
 export(identify_draws)
 export(label_draws)
+export(plot_intercept)
+export(plot_loadings)
+export(plot_scores_ave)
+export(plot_scores_timetrend)
 export(shape_data)
 import(cmdstanr)
+import(ggplot2)
 import(magrittr)
