--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,8 @@ Description: Fit dynamic group-level item response theory (IRT) and multilevel
     estimates subpopulations' average responses to single survey items with a
     dynamic MRP model proposed by Park, Gelman, and Bafumi (2004)
     <doi:10.11126/stanford/9780804753005.003.0011>.
-Version: 0.0.0.9000
-Authors@R: 
+Version: 0.0.1
+Authors@R:
   c(person("Tomoya", "Sasaki", email = "tomo1990sasaki@gmail.com", role = c("aut", "cre"),
           comment = c(ORCID = "0009-0001-9243-2243")),
     person("Devin", "Caughey", email = "caughey@mit.edu", role = c("aut")))
@@ -17,21 +17,22 @@ License: GPL (>= 3)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Depends: 
-    R (>= 3.5.0)
-Imports: 
+Depends:
+    R (>= 3.6)
+Imports:
     cmdstanr,
     coda,
-    dplyr,
+    dplyr (>= 1.0.0),
     factor.switching,
+    ggplot2 (>= 3.4.0),
     ggrepel,
-    magrittr,
+    magrittr  (>= 2.0.0),
     methods,
     posterior,
     reshape2,
     seriation,
-    stringr,
-    tidyr
-Suggests: 
+    stringr (>= 1.5.0),
+    tidyr (>= 1.0.0)
+Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
