--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,10 +26,11 @@ Imports:
     factor.switching,
     ggplot2 (>= 3.4.0),
     ggrepel,
-    magrittr  (>= 2.0.0),
+    magrittr (>= 2.0.0),
     methods,
     posterior,
     reshape2,
+    rlang,
     seriation,
     stringr (>= 1.5.0),
     tidyr (>= 1.0.0)
