--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,7 @@ export(fit)
 export(identify_draws)
 export(label_draws)
 export(plot_intercept)
-export(plot_intercept2)
-export(plot_intercept3)
+export(plot_intercept_test)
 export(plot_loadings)
 export(plot_scores_ave)
 export(plot_scores_timetrend)
