--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(plot_loadings)
 export(plot_scores_ave)
 export(plot_scores_timetrend)
 export(shape_data)
+export(shape_data_modgirt)
 import(cmdstanr)
 import(ggplot2)
 import(magrittr)
