--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(extract_draws)
 export(fit)
 export(fit_modgirt)
 export(identify_draws)
+export(identify_modgirt)
 export(label_draws)
 export(plot_intercept)
 export(plot_intercept_test)
