Create and document reorder_factors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(plot_intercept_test)
 export(plot_loadings)
 export(plot_scores_ave)
 export(plot_scores_timetrend)
+export(reorder_factors)
 export(shape_data)
 export(shape_data_modgirt)
 import(cmdstanr)
