--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,11 @@ export(plot_intercept_test)
 export(plot_loadings)
 export(plot_scores_ave)
 export(plot_scores_timetrend)
-export(reorder_factors)
 export(shape_data)
 export(shape_data_modgirt)
+export(sort_factors)
 import(cmdstanr)
 import(ggplot2)
 import(magrittr)
+import(posterior)
 importFrom(rlang,.data)
