--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(plot_intercept_test)
 export(plot_loadings)
 export(plot_scores_ave)
 export(plot_scores_timetrend)
+export(set_signs)
 export(shape_data)
 export(shape_data_modgirt)
 export(sort_factors)
@@ -19,4 +20,11 @@ import(cmdstanr)
 import(ggplot2)
 import(magrittr)
 import(posterior)
+importFrom(base,stopifnot)
+importFrom(posterior,draws_rvars)
 importFrom(rlang,.data)
+importFrom(rstan,E)
+importFrom(stats,colMeans)
+importFrom(stats,diag)
+importFrom(stats,seq_len)
+importFrom(stats,sign)
